1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-encode-uq): Change BUFFER_MAGNIFICATION to 3.
	(ew-ccl-encode-cq): Ditto.
	(ew-ccl-encode-pq): Ditto.
	(ew-ccl-encode-base64): New CCL program.
	(ew-ccl-base64): New coding system.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el: Re-indented.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el: New file.

	* ew-unit.el: Use 'ew-bq instead of 'mel.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* Makefile (clean): Delete rule for cleaning tl.

	* natset.el (natset-gen-ccl-branch256): New function.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* Makefile (check): New rule.

	* TESTPAT: Add batch testing facility.

	* lex.el (lex-use-ccl): Abolished.
	(lex-ccl-execute): New variable.
	(lex-ccl-use-name): New variable.
	(lex-gen-machine): Use `lex-ccl-execute' instead of `lex-use-ccl'.
	(lex-gen-ccl-unibyte-automata): Use `lex-ccl-execute' and
	`lex-ccl-use-name' for generating codes.
	(lex-gen-ccl-unibyte-automata-program): Use `lex-ccl-execute'.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* lex.el (lex-gen-ccel-unibyte-automata-state): Jump start of loop
	on end of states.

1998-08-22  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Use `\t' instead of raw TAB character.

	* ew-line.el (ew-crlf-line-generic): Accept bare LF before first CR
	occurence.

	* ew-quote.el: Evaluate constants on byte-compile time.

	* ew-unit.el: Ditto.

	* ew-var.el: Ditto.

	* lex.el: CCL support.
	(lex-use-ccl): New variable.
	(lex-gen-machine): Use `lex-gen-automata' and `lex-gen-action'.
	(lex-gen-automata): New function.
	(lex-gen-action): New function.
	(lex-gen-ccl-unibyte-automata): New function.
	(lex-gen-ccl-unibyte-automata-program): New function.
	(lex-gen-ccl-unibyte-automata-state): New function.

	* natset.el (natset-gen-ccl-branch): New function.
	(natset-gen-ccl-branch-internal): New function.
	(natset-assoc): New function.
