@@ -1,3 +1,8 @@
+1998-08-24  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* ew-bq.el (ew-ccl-qp-table): New constant.
+	(ew-ccl-encode-quoted-printable): New CCL program.
+
 1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* ew-bq.el (ew-ccl-encode-uq): Change BUFFER_MAGNIFICATION to 3.
